# revery

src/Native/: CMakeLists.txt  dialog_gtk.c
src/Native/config/: discover.ml
src/UI/: Style.re
